--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -1,186 +1,235 @@
-header>div:nth-child(2) {
-    text-align: center;
-    flex: 2;
-}
-
-header>div:nth-child(3) {
-    text-align: ri;
-    flex: 1;
-}
-
 /* POKEDEX */
 
 .container {
     display: flex;
+    flex-direction: row-reverse;
+
+    .openCloseAside {
+        position: absolute;
+        z-index: 2;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: #333;
+        width: 50px;
+        height: 50px;
+        margin-top: 20px;
+        border-radius: 8px 0px 0px 8px;
+    }
+
+    #battle-panel {
+        width: 250px;
+        height: 100dvh;
+        padding: 15px;
+        background-color: #f7f7f7;
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        border-right: 1px solid #ccc;
+        position: sticky;
+        top: 0;
+        height: 100vh;
+        transition: 0.5s;
+        background: linear-gradient(to right, #444, #222);
+        border-left: 5px solid #f7d02c;
+
+        .user-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 20px;
+            padding: 10px;
+            background: linear-gradient(to bottom, #444, #222);
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            color: white;
+            text-align: center;
+            overflow: hidden;
+
+            .user-avatar {
+                width: 80px;
+                height: 80px;
+                object-fit: cover;
+                border-radius: 50%;
+                border: 3px solid #f7f7f7;
+                margin-bottom: 10px;
+            }
+
+            .user-name {
+                font-size: 18px;
+                font-weight: bold;
+                margin: 5px 0;
+                text-wrap: wrap;
+            }
+
+            .user-email {
+                font-size: 16px;
+                width: 180px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+
+            .user-stats {
+                font-size: 14px;
+                margin: 0;
+                color: #ccc;
+            }
+
+            .edit-button {
+                padding: 12px 20px;
+                background-color: #f7d02c;
+                color: rgba(0, 0, 0, 0.76);
+                border: none;
+                border-radius: 8px;
+                font-size: 16px;
+                font-weight: bold;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
+
+            .edit-button:hover {
+                transform: scale(1.1);
+            }
+        }
+
+        h2 {
+            font-size: 20px;
+            margin-bottom: 10px;
+            color: white;
+        }
+
+        ul {
+            display: grid;
+            grid-template-areas:
+                "slot1 slot1"
+                "slot2 slot3"
+                "slot4 slot5";
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            padding: 0;
+            margin: 0;
+        }
+
+        li {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f7f7f7;
+            height: 100px;
+            width: 100%;
+
+            button {
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                background-color: #e74c3c;
+                color: white;
+                border: none;
+                padding: 4px 8px;
+                border-radius: 4px;
+                font-size: 12px;
+                cursor: pointer;
+                opacity: 0;
+                z-index: 10;
+                transform: scale(0);
+                transition: transform 0.3s ease, opacity 0.3s ease;
+            }
+
+            button:hover {
+                background-color: #c0392b;
+            }
+
+            img {
+                width: 50px;
+                height: 50px;
+                object-fit: cover;
+                border-radius: 50%;
+                margin-bottom: 5px;
+            }
+
+            span {
+                font-size: 14px;
+                text-align: center;
+                color: #333;
+                font-weight: bold;
+            }
+        }
+
+        li:hover button {
+            transform: scale(1);
+            opacity: 1;
+            visibility: visible;
+        }
+
+        li:nth-child(1) {
+            grid-area: slot1;
+        }
+
+        li:nth-child(2) {
+            grid-area: slot2;
+        }
+
+        li:nth-child(3) {
+            grid-area: slot3;
+        }
+
+        li:nth-child(4) {
+            grid-area: slot4;
+        }
+
+        li:nth-child(5) {
+            grid-area: slot5;
+        }
+
+        .empty-slot {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #999;
+            font-size: 14px;
+            height: 90px;
+            background-color: #f7f7f7;
+            border: 1px dashed #ccc;
+            border-radius: 4px;
+        }
+    }
 }
 
-/* User Info Section */
-.user-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 10px;
-    background: linear-gradient(to bottom, #444, #222);
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    color: white;
-    text-align: center;
-}
+@media (max-width: 768px) {
 
-.user-info .user-avatar {
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 3px solid #f7f7f7;
-    margin-bottom: 10px;
-}
+    .openCloseAside {
+        display: flex;
+    }
 
-.user-info .user-name {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 5px 0;
-}
-
-.user-info .user-stats {
-    font-size: 14px;
-    margin: 0;
-    color: #ccc;
-}
-
-.battle-panel {
-    width: 250px;
-    padding: 15px;
-    background-color: #f7f7f7;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    border-right: 1px solid #ccc;
-    position: sticky;
-    top: 0;
-    height: 100vh;
-    background: linear-gradient(to bottom, rgb(50, 50, 50), rgb(50, 50, 50), rgb(134, 35, 35));
-}
-
-.battle-panel h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    color: white;
-}
-
-.battle-panel ul {
-    display: grid;
-    grid-template-areas:
-        "slot1 slot1"
-        "slot2 slot3"
-        "slot4 slot5";
-    grid-template-columns: 1fr 1fr; /* Two columns for the second and third rows */
-    gap: 10px; /* Add spacing between slots */
-    padding: 0;
-    margin: 0;
-}
-
-.battle-panel li {
-    position: relative; /* Set the slot as a positioned container for the button */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f7f7f7;
-    height: 100px; /* Set the height to match the width for square slots */
-    width: 100%; /* Full width inside the grid */
-}
-
-.battle-panel li button {
-    position: absolute; /* Position the button inside the slot */
-    top: -10px; /* Offset from the top */
-    right: -10px; /* Offset from the right */
-    background-color: #e74c3c;
-    color: white;
-    border: none;
-    padding: 4px 8px;
-    border-radius: 4px;
-    font-size: 12px;
-    cursor: pointer;
-    opacity: 0; /* Make it invisible */
-    z-index: 10; /* Ensure it appears above other content */
-    transform: scale(0);
-    transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-.battle-panel li:hover button {
-    transform: scale(1);
-    opacity: 1; /* Make it visible */
-    visibility: visible; /* Enable interaction */
-}
-
-.battle-panel li button:hover {
-    background-color: #c0392b; /* Darker color on hover */
-}
-
-.battle-panel li:nth-child(1) {
-    grid-area: slot1; /* First slot takes the first row */
-}
-
-.battle-panel li:nth-child(2) {
-    grid-area: slot2; /* Second slot in the second row */
-}
-
-.battle-panel li:nth-child(3) {
-    grid-area: slot3; /* Third slot in the second row */
-}
-
-.battle-panel li:nth-child(4) {
-    grid-area: slot4; /* Fourth slot in the third row */
-}
-
-.battle-panel li:nth-child(5) {
-    grid-area: slot5; /* Fifth slot in the third row */
-}
-
-.battle-panel li img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-bottom: 5px; /* Space between image and name */
-}
-
-.battle-panel li span {
-    font-size: 14px; /* Adjust font size */
-    text-align: center; /* Center align text */
-    color: #333;
-    font-weight: bold;
-}
-
-.empty-slot {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #999;
-    font-size: 14px;
-    height: 90px; /* Match the height of a filled slot */
-    background-color: #f7f7f7;
-    border: 1px dashed #ccc;
-    border-radius: 4px;
+    #battle-panel {
+        margin-right: -250px;
+        position: fixed !important;
+        z-index: 2;
+        padding-top: 80px;
+    }
 }
 
 
-.battle-panel li button {
-    background-color: #e74c3c;
-    color: white;
-    border: none;
-    padding: 4px 8px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 12px; /* Adjust button size */
-}
 
-.battle-panel li button:hover {
-    background-color: #c0392b;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 main {
     flex: 1;
@@ -224,6 +273,7 @@ main {
     from {
         transform: scale(0);
     }
+
     to {
         transform: scale(1);
     }
@@ -322,7 +372,7 @@ main {
 
 
 
-.pokemon-card {
+/*.pokemon-card {
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 10px;
@@ -330,44 +380,120 @@ main {
     width: 200px;
     text-align: center;
     opacity: 0;
-    /* Start invisible */
     box-shadow: none;
     transform: scale(0);
-    /* Start with a smaller size */
     transition: transform 0.5s ease, opacity 0.3s ease, box-shadow 0.6s ease;
-    /* Smooth scaling, fade-in and box-shadow */
 }
 
 .pokemon-card.visible {
     opacity: 1;
-    /* Make visible */
     transform: scale(1);
-    /* Scale to full size */
 }
 
 .pokemon-card.hidden {
     display: none;
-    /* Hide cards when filtered */
-}
+}*/
 
-.pokemon-card:hover {
-    transform: scale(1.1);
-    /* Scale up on hover */
-    transition: transform 0.3s ease, box-shadow 0.6s ease;
-    /* Smooth scaling for hover */
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-    /* Larger box shadow on hover */
-    z-index: 99;
-}
+
 
 .pokemon-list {
     display: flex;
+    gap: 15px;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 20px;
 }
 
 .pokemon-img {
     width: 100px;
     height: 100px;
 }
+
+
+
+
+.pokemon-card {
+    width: 250px;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    opacity: 0;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
+    transform: scale(0);
+    transition: transform 0.5s ease, opacity 0.3s ease, box-shadow 0.6s ease;
+
+    .hp {
+        width: 80px;
+        background-color: #ffffff;
+        text-align: center;
+        padding: 8px 0;
+        border-radius: 30px;
+        margin-left: auto;
+        font-weight: 400;
+
+        span {
+            font-size: 12px;
+            letter-spacing: 0.4px;
+            font-weight: 600;
+        }
+    }
+
+    .poke-img {
+        display: block;
+        width: 100px;
+        max-height: 200px;
+        position: relative;
+        margin: 20px auto;
+    }
+
+    .poke-name {
+        text-align: center;
+        font-weight: 600;
+    }
+
+    .types {
+        display: flex;
+        justify-content: space-around;
+        margin: 20px 0 40px 0;
+
+        span {
+            font-size: 12px;
+            letter-spacing: 0.4px;
+            font-weight: 600;
+            text-transform: capitalize;
+
+            padding: 5px 20px;
+            border-radius: 20px;
+            color: #ffffff;
+        }
+    }
+    
+    .stats {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        text-align: center;
+
+        p {
+            color: #404060;
+        }
+    }
+}
+
+.pokemon-card.visible {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.pokemon-card:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease, box-shadow 0.6s ease;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+
+
+
+
+
+
