--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -215,6 +215,11 @@
         z-index: 2;
         padding-top: 80px;
     }
+
+    .container-modal {
+        height: calc(100dvh - 66px);
+        padding: 0px !important;
+    }
 }
 
 
@@ -234,6 +239,43 @@
 main {
     flex: 1;
     padding: 20px;
+}
+
+
+.container-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    width: 261px;
+    height: 459px;
+    text-align: center;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+    .mask {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 999;
+
+        iframe {
+            width: 200%;
+            height: 200%;
+            transform: scale(0.5);
+            transform-origin: 0 0;
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 99;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+    }
 }
 
 
@@ -466,7 +508,7 @@ main {
             color: #ffffff;
         }
     }
-    
+
     .stats {
         display: flex;
         align-items: center;
@@ -490,10 +532,3 @@ main {
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
     z-index: 1;
 }
-
-
-
-
-
-
-
